[gd_scene load_steps=17 format=3 uid="uid://di0ixdytwx1hv"]

[ext_resource type="Script" uid="uid://d1iet8fngqlty" path="res://Scripts/Main Menu/Main Menu Controller.gd" id="1_6svde"]
[ext_resource type="Script" uid="uid://bq81ahdwulpgr" path="res://Scripts/UI/Options Panel.gd" id="2_0vewo"]
[ext_resource type="PackedScene" uid="uid://c2ru1q5gvx8uw" path="res://Prefabs/UI/options_panel.tscn" id="3_85ift"]
[ext_resource type="FontFile" uid="uid://y2fjskeskhyt" path="res://Fonts/Chewy-Regular.ttf" id="3_mdvdu"]
[ext_resource type="Texture2D" uid="uid://r50oq5df1ugk" path="res://Sprites/UI/UI Panels.png" id="4_4lp62"]
[ext_resource type="Script" uid="uid://c0igtkxsnjsgj" path="res://Scripts/UI/TextButtonGroup.gd" id="4_88j2r"]
[ext_resource type="Script" uid="uid://cqfqww5rcrh8n" path="res://Scripts/UI/MenuText.gd" id="5_j2368"]
[ext_resource type="Script" uid="uid://chars5jgkxrdx" path="res://Scripts/UI/MenuTextToggle.gd" id="7_4lp62"]
[ext_resource type="Theme" uid="uid://chi28l03dgsy2" path="res://Themes/MenuTextStandard.tres" id="7_xrvh8"]
[ext_resource type="Script" uid="uid://c1uaa211xtggr" path="res://Scripts/UI/credits.gd" id="10_wib81"]

[sub_resource type="LabelSettings" id="LabelSettings_xppeu"]
font = ExtResource("3_mdvdu")
font_size = 116

[sub_resource type="AtlasTexture" id="AtlasTexture_0vewo"]
atlas = ExtResource("4_4lp62")
region = Rect2(749.35, 500.675, 140.8, 68.2)

[sub_resource type="AtlasTexture" id="AtlasTexture_0126h"]
atlas = ExtResource("4_4lp62")
region = Rect2(746.7, 424.2, 149.6, 72.6)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lp62"]
atlas = ExtResource("4_4lp62")
region = Rect2(746.615, 426.487, 149.077, 70.1538)

[sub_resource type="AtlasTexture" id="AtlasTexture_wib81"]
atlas = ExtResource("4_4lp62")
region = Rect2(748.05, 498.05, 152.9, 75.35)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iy524"]
bg_color = Color(0, 0, 0, 0)

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00149, 1)
script = ExtResource("1_6svde")

[node name="Options" type="Node" parent="."]
script = ExtResource("2_0vewo")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 560.0
offset_top = 45.0
offset_right = -61.0
offset_bottom = -453.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Title"
label_settings = SubResource("LabelSettings_xppeu")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Buttons Pivot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 113.83
offset_top = -72.0
offset_right = 113.83
offset_bottom = -72.0
grow_vertical = 2

[node name="Main Buttons" type="VBoxContainer" parent="Buttons Pivot" node_paths=PackedStringArray("buttons")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.99255
offset_top = -5.0
offset_right = 232.007
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_88j2r")
buttons = [NodePath("Start Button"), NodePath("Options Button"), NodePath("Credits Button"), NodePath("Exit Button")]
active = true

[node name="Start Button" type="Control" parent="Buttons Pivot/Main Buttons"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
script = ExtResource("5_j2368")

[node name="TextureRect" type="TextureRect" parent="Buttons Pivot/Main Buttons/Start Button"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
custom_minimum_size = Vector2(0, 67.7)
layout_mode = 2
offset_left = 4.0
offset_top = -3.0
offset_right = 161.0
offset_bottom = 73.0
texture = SubResource("AtlasTexture_0vewo")

[node name="MarginContainer" type="MarginContainer" parent="Buttons Pivot/Main Buttons/Start Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="Start Button" type="RichTextLabel" parent="Buttons Pivot/Main Buttons/Start Button/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Start
"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Options Button" type="Control" parent="Buttons Pivot/Main Buttons"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
script = ExtResource("5_j2368")

[node name="TextureRect" type="TextureRect" parent="Buttons Pivot/Main Buttons/Options Button"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
custom_minimum_size = Vector2(0, 67.7)
layout_mode = 2
offset_left = 1.9974
offset_top = -5.0
offset_right = 199.997
offset_bottom = 78.0
texture = SubResource("AtlasTexture_0126h")

[node name="MarginContainer" type="MarginContainer" parent="Buttons Pivot/Main Buttons/Options Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="Start Button" type="RichTextLabel" parent="Buttons Pivot/Main Buttons/Options Button/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Options"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Credits Button" type="Control" parent="Buttons Pivot/Main Buttons"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
script = ExtResource("5_j2368")

[node name="TextureRect" type="TextureRect" parent="Buttons Pivot/Main Buttons/Credits Button"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
custom_minimum_size = Vector2(0, 67.7)
layout_mode = 2
offset_left = 9.0
offset_top = -2.0
offset_right = 190.0
offset_bottom = 72.0
texture = SubResource("AtlasTexture_0vewo")

[node name="MarginContainer" type="MarginContainer" parent="Buttons Pivot/Main Buttons/Credits Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="Start Button" type="RichTextLabel" parent="Buttons Pivot/Main Buttons/Credits Button/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Credits"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Exit Button" type="Control" parent="Buttons Pivot/Main Buttons"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
script = ExtResource("5_j2368")

[node name="TextureRect" type="TextureRect" parent="Buttons Pivot/Main Buttons/Exit Button"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
custom_minimum_size = Vector2(0, 67.7)
layout_mode = 2
offset_left = 6.0
offset_top = 1.0
offset_right = 146.0
offset_bottom = 69.0
texture = SubResource("AtlasTexture_0vewo")

[node name="MarginContainer" type="MarginContainer" parent="Buttons Pivot/Main Buttons/Exit Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 0

[node name="Start Button" type="RichTextLabel" parent="Buttons Pivot/Main Buttons/Exit Button/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Exit"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="Options Buttons" type="VBoxContainer" parent="." node_paths=PackedStringArray("buttons")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 385.426
offset_top = 286.0
offset_right = -357.574
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_88j2r")
buttons = [NodePath("Audio Volume"), NodePath("Fullscreen Button"), NodePath("Vsync Toggle"), NodePath("Back Button")]
close_on_left = true
metadata/_edit_group_ = true

[node name="Audio Volume" type="RichTextLabel" parent="Options Buttons"]
unique_name_in_owner = true
visible = false
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Volume"
scroll_active = false
autowrap_mode = 0
script = ExtResource("7_4lp62")

[node name="Toggle Text" type="RichTextLabel" parent="Options Buttons/Audio Volume"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
offset_left = 293.563
offset_top = -1.0
offset_right = 449.563
offset_bottom = 63.9
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "10%"
scroll_active = false
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="Options Buttons/Audio Volume"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
show_behind_parent = true
custom_minimum_size = Vector2(0, 67.7)
offset_left = -23.0
offset_top = -8.0
offset_right = 166.0
offset_bottom = 67.0
texture = SubResource("AtlasTexture_4lp62")
expand_mode = 1

[node name="Fullscreen Button" type="RichTextLabel" parent="Options Buttons"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Fullscreen"
scroll_active = false
autowrap_mode = 0
script = ExtResource("7_4lp62")

[node name="Toggle Text" type="RichTextLabel" parent="Options Buttons/Fullscreen Button"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
offset_left = 293.563
offset_top = -1.0
offset_right = 449.563
offset_bottom = 63.9
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "On"
scroll_active = false
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="Options Buttons/Fullscreen Button"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
show_behind_parent = true
custom_minimum_size = Vector2(0, 67.7)
offset_left = -23.0
offset_top = -8.0
offset_right = 224.0
offset_bottom = 79.0
texture = SubResource("AtlasTexture_4lp62")
expand_mode = 1

[node name="Vsync Toggle" type="RichTextLabel" parent="Options Buttons"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Vsync"
scroll_active = false
autowrap_mode = 0
script = ExtResource("7_4lp62")

[node name="Toggle Text" type="RichTextLabel" parent="Options Buttons/Vsync Toggle"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
offset_left = 293.563
offset_top = -1.0
offset_right = 449.563
offset_bottom = 63.9
theme = ExtResource("7_xrvh8")
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "On"
scroll_active = false
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="Options Buttons/Vsync Toggle"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
show_behind_parent = true
custom_minimum_size = Vector2(0, 67.7)
offset_left = -23.0
offset_top = -3.0
offset_right = 162.0
offset_bottom = 77.0
texture = SubResource("AtlasTexture_wib81")
expand_mode = 1

[node name="Back Button" type="RichTextLabel" parent="Options Buttons"]
clip_contents = false
custom_minimum_size = Vector2(0, 64.9)
layout_mode = 2
theme = ExtResource("7_xrvh8")
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "Back"
scroll_active = false
autowrap_mode = 0
script = ExtResource("5_j2368")

[node name="TextureRect" type="TextureRect" parent="Options Buttons/Back Button"]
self_modulate = Color(0.278532, 0.0895237, 0.177514, 1)
show_behind_parent = true
custom_minimum_size = Vector2(0, 67.7)
offset_left = -23.9643
offset_top = -3.0
offset_right = 133.036
offset_bottom = 73.0
texture = SubResource("AtlasTexture_0vewo")

[node name="Options Panel" parent="." instance=ExtResource("3_85ift")]
visible = false
layout_mode = 0
offset_left = -694.964
offset_top = 176.0
offset_right = -214.964
offset_bottom = 628.0

[node name="Fade Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iy524")

[node name="Version Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
text = "v 0.1"
horizontal_alignment = 2

[node name="Credits" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -401.0
offset_right = 444.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10_wib81")
scroll_speed = 30.0
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("3_mdvdu")
theme_override_fonts/italics_font = ExtResource("3_mdvdu")
theme_override_fonts/bold_font = ExtResource("3_mdvdu")
theme_override_font_sizes/bold_italics_font_size = 0
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/normal_font_size = 31
theme_override_font_sizes/bold_font_size = 35
bbcode_enabled = true
text = "[center][b]Credits[/b][/center]

This game was made in about 4 weeks in an attempt to prevent a cycle of prototypes and unfinished projects.

[center][i]Programming, Design & Environmental Art[/i][/center]

[center][b]Ben Naulls[/b][/center]


[center][i]Music[/i][/center]

[center][b]---?---[/b][/center]


[center][i]Character Art & Animation[/i][/center]

[center][b]---?---[/b][/center]


NZ native bird recordings care of: 
Department of Conservation (NZ)"

[connection signal="buttonAction" from="Buttons Pivot/Main Buttons/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="buttonAction" from="Buttons Pivot/Main Buttons/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="buttonAction" from="Buttons Pivot/Main Buttons/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="buttonAction" from="Buttons Pivot/Main Buttons/Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="close_action" from="Options Buttons" to="." method="_on_back_button_button_action"]
[connection signal="buttonAction" from="Options Buttons/Audio Volume" to="Options Buttons/Audio Volume" method="trigger_action"]
[connection signal="button_toggle_action" from="Options Buttons/Audio Volume" to="Options" method="_on_UIFullscreenCheckbox_toggled"]
[connection signal="buttonAction" from="Options Buttons/Fullscreen Button" to="Options Buttons/Fullscreen Button" method="trigger_action"]
[connection signal="button_toggle_action" from="Options Buttons/Fullscreen Button" to="Options" method="_on_UIFullscreenCheckbox_toggled"]
[connection signal="buttonAction" from="Options Buttons/Vsync Toggle" to="Options Buttons/Vsync Toggle" method="trigger_action"]
[connection signal="button_toggle_action" from="Options Buttons/Vsync Toggle" to="Options" method="_on_UIVsyncCheckbox_toggled"]
[connection signal="buttonAction" from="Options Buttons/Back Button" to="Options Buttons" method="_on_close"]
[connection signal="close_action" from="Credits" to="." method="_on_close_credits_button_pressed"]
